@@ -49,9 +49,11 @@ film.outputs.1.filename = denoised.png
 # will have high resolution maps.
 #
 # Set the minimum size of the baked map when "autosize" option is enabled
-bake.minmapautosize = 1024
+#bake.minmapautosize = 1024
+bake.minmapautosize = 128
 # Set the maximum size of the baked map when "autosize" option is enabled
-bake.maxmapautosize = 2048
+#bake.maxmapautosize = 2048
+bake.maxmapautosize = 256
 # Tell "autosize" option to use power of 2 size (for later usage with glTF,
 # OpenGL, Vulkan, etc.)
 bake.powerof2autosize.enable = 1
